# ethereum-wallet

./: MetamaskProviderPlugin.podspec  README.md  ethereum-wallet.code-workspace
.github/: CODEOWNERS
.github/workflows/: interface-cd.yaml  interface-ci.yaml  js-cd.yaml  js-ci.yaml  kt-cd.yaml  kt-ci.yaml  py-cd.yaml  py-ci.yaml  rs-cd.yaml  rs-ci.yaml  swift-metamask-ci.yaml
implementations/js/: README.md  package.json  polywrap.graphql  polywrap.yaml
implementations/js/src/: Connection.ts  index.ts  rpc.ts
implementations/js/tests/: index.spec.ts
implementations/kt/: .gitignore  build.gradle.kts  package.json  polywrap.yaml  settings.gradle.kts
implementations/kt/gradle/wrapper/: gradle-wrapper.properties
implementations/py/: README.md  package.json  pyproject.toml
implementations/rs/: Cargo.toml  README.md  ideas  todo
implementations/rs/src/: connection.rs  connections.rs  handler.rs  lib.rs  networks.rs  types.rs
implementations/rs/src/wrap/: module.rs  types.rs
implementations/rs/tests/it/: main.rs  request.rs
implementations/swift-metamask/: .gitignore  MetamaskProviderPlugin.podspec
implementations/swift-metamask/Source/MetamaskProvider/: MetamaskProvider.swift
implementations/swift/metamask/: .gitignore  MetamaskProviderPlugin.podspec  package.json  polywrap.yaml
implementations/swift/metamask/Source/: MetamaskProvider.swift  Utils.swift
interface/: README.md  URI.txt  deployment.json  package.json  polywrap.deploy.yaml  polywrap.docs.yaml  polywrap.yaml
interface/resources/: README.md
(+23 files in other folders)
