[package]
name = "polywrap_ethereum_wallet_plugin"
version = "0.0.1-beta.1"
license = "MIT"
description = "Polywrap rust Ethereum wallet plugin"
edition = "2021"

[dependencies]
polywrap_core = { version = "0.1.6-beta.2" }
polywrap_plugin = { version = "0.1.6-beta.2" }
polywrap_msgpack = { version = "0.1.6-beta.2" }
wrap_manifest_schemas = { version = "0.1.6-beta.2" }
serde = { version = "1.0.145", features = ["derive"] }

ethers = { version = "2.0.4" }
lazy_static = { version = "1.4.0" }
tokio = "1.28.1"
thiserror = "1.0.30"

[dev-dependencies]
polywrap_client = { version = "0.1.6-beta.2" }
